Make `Envelope` the main unit of currency when working with stored messages